--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-basic-auth": "^1.1.5",
-    "body-parser": "^1.18.3"
+    "body-parser": "^1.18.3",
+    "bcryptjs": "^2.4.3"
   },
   "private": true
 }
